--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,19 +28,15 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v1
-      - name: Install nix
-        uses: cachix/install-nix-action@v15
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
         with:
-          extra_nix_config: |
-            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build
-        run: nix build
-
+          ruby-version: '2.7' # Not needed with a .ruby-version file
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          cache-version: 1 # Increment this number if you need to re-download cached gems
+      - run: bundle exec jekyll build --baseurl ${{ steps.pages.outputs.base_path }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
-        with:
-          path: ./result
 
   deploy:
     needs: build
